# skill-discuss-for-specs

./: .gitignore  AGENTS.md  README-zh.md  README.md  install.sh  pyproject.toml
.discuss/2026-01-17/skill-discuss-architecture-design/: meta.yaml
.discuss/2026-01-19/spec-kit-evaluation/: meta.yaml  outline.md
.discuss/2026-01-20/hooks-forced-precipitation/: meta.yaml  outline.md
.discuss/2026-01-27/cli-output-beautify/: meta.yaml  outline.md
config/: default.yaml
docs/: HOW-IT-WORKS-zh.md  HOW-IT-WORKS.md  VERIFICATION.md
hooks/common/: file_utils.py  logging_utils.py  meta_parser.py
hooks/file-edit/: track_file_edit.py
hooks/post-response/: check_stale.py  update_round.py
hooks/stop/: check_precipitation.py
npm-package/: package.json  pnpm-lock.yaml
npm-package/scripts/: build.js
npm-package/src/: installer.js  platform-config.js  ui.js  utils.js
npm-package/tests/: installer.test.js  platform-config.test.js  utils.test.js
scripts/: build.sh
skills/disc-coordinator/: SKILL.md
skills/disc-coordinator/headers/: claude-code.yaml
skills/disc-output/: SKILL.md
skills/discuss-coordinator/: SKILL.md
skills/discuss-for-specs/: SKILL.md
skills/discuss-mode/: SKILL.md
skills/discuss-output/: SKILL.md
specs/discuss-for-specs-v1/: 1-overview.md  2-technical-research.md  3-architecture.md  4-task-list.md  5-backlog.md
specs/spec-kit-evaluation/: 00-overview.md  01-technical-research.md  02-architecture-design.md  03-task-list.md  04-backlog.md
templates/: meta.yaml  outline.md
tests/test_hooks/: test_file_utils.py  test_integration.py
(+57 files in other folders)
